Issue #25715: Python 3.5.1 installer shows wrong upgrade path and incorrect logic for launcher detection.